Issue: Project image attributes modified to end distortion
The project images appeared slightly distorted due to the combination of dimensions being specified
allowing them to be rendered out of their native aspect ratio at certain viewports.

--- a/css/portfolio-huge.css
+++ b/css/portfolio-huge.css
@@ -261,13 +261,13 @@ aside {
 
 .photo-grid {
   display: grid;
-  grid-gap: 12px;
+  grid-gap: 20px;
   grid-template-columns: 19% 27% 27% 27%;
   /* padding: 0;
   /* margin-top: 0;
   /* margin-bottom: 0;
   /* margin-left: 0; */
-  margin-right: 55px;
+  margin-right: 120px;
 }
 
 .hero-photo {
@@ -278,7 +278,7 @@ aside {
 .one-photo {
   /* width: auto;     */
   /* height: 35vmin;  */
-  max-width: 100%;
+  max-width: 280px;
   height: auto;
 }
 
@@ -296,135 +296,6 @@ aside {
   grid-column-end: 5;
   grid-row-start: 1;
   grid-row-end: 2;
-}
-
-.gFW {
-  grid-column-start: 2;
-  grid-column-end: 5;
-  grid-row-start: 2;
-  grid-row-end: 3;
-}
-
-/* Article 1 - row 1 data */
-.gA1r1 {
-  grid-column: 2;
-  grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  background-color: white;
-}
-
-/* Article 2 - row 1 data */
-.gA2r1 {
-  grid-column: 3;
-  grid-column-end: 4;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  background-color: white;
-}
-
-/* Article 2 - row 1 data */
-.gA3r1 {
-  grid-column: 4;
-  grid-column-end: 5;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  background-color: white;
-}
-
-.gA1r2 {
-  grid-column: 2;
-  grid-column-end: 3;
-  grid-row-start: 4;
-  grid-row-end: 5;
-  background-color: white;
-}
-
-.gA2r2 {
-  grid-column: 3;
-  grid-column-end: 4;
-  grid-row-start: 4;
-  grid-row-end: 5;
-  /* background-color: white; */
-}
-
-.gA3r2 {
-  grid-column: 4;
-  grid-column-end: 5;
-  grid-row-start: 4;
-  grid-row-end: 5;
-  /* background-color: white; */
-}
-
-/* Article 1 - row 3 data */
-.gA1r3 {
-  grid-column: 2;
-  grid-column-end: 3;
-  grid-row-start: 5;
-  grid-row-end: 6;
-  /* background-color: white; */
-}
-
-.gA2r3 {
-  grid-column: 3;
-  grid-column-end: 4;
-  grid-row-start: 5;
-  grid-row-end: 6;
-  /* background-color: white; */
-}
-
-.gA3r3 {
-  grid-column: 4;
-  grid-column-end: 5;
-  grid-row-start: 5;
-  grid-row-end: 6;
-  /* background-color: white; */
-}
-
-.gA1r4 {
-  grid-column: 2;
-  grid-column-end: 3;
-  grid-row-start: 6;
-  grid-row-end: 7;
-  /* background-color: white; */
-}
-
-.gA2r4 {
-  grid-column: 3;
-  grid-column-end: 4;
-  grid-row-start: 6;
-  grid-row-end: 7;
-  /* background-color: white; */
-}
-
-.gA3r4 {
-  grid-column: 4;
-  grid-column-end: 5;
-  grid-row-start: 6;
-  grid-row-end: 7;
- /* background-color: white; */
-}
-
-/* Article 1 - row 5 data */
-.gA1r5 {
-  grid-column: 2;
-  grid-column-end: 3;
-  grid-row-start: 7;
-  grid-row-end: 8;
-}
-
-.gA2r5 {
-  grid-column: 3;
-  grid-column-end: 4;
-  grid-row-start: 7;
-  grid-row-end: 8;
-}
-
-.gA3r5 {
-  grid-column: 4;
-  grid-column-end: 5;
-  grid-row-start: 7;
-  grid-row-end: 8;
 }
 
 .font-section-title {
