--- a/css/portfolio-medium.css
+++ b/css/portfolio-medium.css
@@ -278,9 +278,10 @@ aside {
 }
 
 .one-photo {
-  height: 28vmin;
-  width: auto;
+  /* width: auto;     */
+  /* height: 35vmin;  */
   max-width: 100%;
+  height: auto;
 }
 
 .box11 {
